moved image classification notebooks into a common folder.

--- a/intro_to_keras_for_engineers.ipynb
+++ b/intro_to_keras_for_engineers.ipynb
@@ -142,8 +142,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "var: 1.0005\n",
-      "mean: 0.0000\n"
+      "var: 1.0007\n",
+      "mean: -0.0000\n"
      ]
     }
    ],
@@ -425,7 +425,7 @@
       "Non-trainable params: 0 (0.00 Byte)\n",
       "_________________________________________________________________\n",
       "Fit on NumPy data\n",
-      "938/938 [==============================] - 3s 2ms/step - loss: 0.2692\n"
+      "938/938 [==============================] - 10s 8ms/step - loss: 0.2617\n"
      ]
     }
    ],
@@ -464,7 +464,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'loss': [0.2691708207130432]}\n"
+      "{'loss': [0.26165127754211426]}\n"
      ]
     }
    ],
@@ -504,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.1190 - acc: 0.9641\n"
+      "1875/1875 [==============================] - 16s 7ms/step - loss: 0.1148 - acc: 0.9649\n"
      ]
     }
    ],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8a5024fe-9583-4765-83ab-618d30fb02f9",
    "metadata": {
     "tags": []
@@ -538,7 +538,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.0757 - acc: 0.9760 - val_loss: 0.0796 - val_acc: 0.9752\n"
+      "1871/1875 [============================>.] - ETA: 0s - loss: 0.0736 - acc: 0.9771"
      ]
     }
    ],
@@ -560,61 +560,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "4034f033-acb8-41dd-8db1-5e361e25fd5b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/2\n",
-      "1855/1875 [============================>.] - ETA: 0s - loss: 0.0585 - acc: 0.9812INFO:tensorflow:Assets written to: ./models\\model_1\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: ./models\\model_1\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0586 - acc: 0.9812\n",
-      "Epoch 2/2\n",
-      "1868/1875 [============================>.] - ETA: 0s - loss: 0.0449 - acc: 0.9852INFO:tensorflow:Assets written to: ./models\\model_2\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: ./models\\model_2\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0450 - acc: 0.9851\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.src.callbacks.History at 0x2138c17dad0>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "callbacks = [\n",
     "    keras.callbacks.ModelCheckpoint(\n",
@@ -634,33 +585,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "0efaf6f9-546c-4863-b8b3-33b94677340a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/2\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0361 - acc: 0.9876\n",
-      "Epoch 2/2\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0299 - acc: 0.9904\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.src.callbacks.History at 0x213a0855390>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "callbacks = [\n",
     "    keras.callbacks.TensorBoard(log_dir='./logs')\n",
@@ -678,22 +608,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "917ab421-c5c0-4c45-ad78-4edffa177e9f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "157/157 [==============================] - 0s 2ms/step - loss: 0.0885 - acc: 0.9732\n",
-      "loss: 0.09\n",
-      "acc: 0.97\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loss, acc = model.evaluate(val_dataset)  # returns loss and metrics\n",
     "print(\"loss: %.2f\" % loss)\n",
@@ -710,21 +630,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "4bd66f95-da9c-4a6a-9311-44ccb7dbe610",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "157/157 [==============================] - 0s 2ms/step\n",
-      "(10000, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predictions = model.predict(val_dataset)\n",
     "print(predictions.shape)"
@@ -742,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "c6a07638-228d-410e-8919-2ec723fdc676",
    "metadata": {
     "tags": []
@@ -767,21 +678,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "e17028b1-ac8c-4449-bbcd-333e4d74f4e4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend\n",
-      "Reloading Tuner from ./tuners\\untitled_project\\tuner0.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import keras_tuner\n",
     "\n",
@@ -796,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "25710d40-1a34-41a5-8a88-914f70b40869",
    "metadata": {
     "tags": []
@@ -808,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "42e745e1-92e1-4a6c-8ed6-8690846ed8f4",
    "metadata": {
     "tags": []
@@ -820,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "6d860af4-360c-44d6-ba26-8a55469df79b",
    "metadata": {
     "tags": []
